--- a/public/app/styles/spa.shell.css
+++ b/public/app/styles/spa.shell.css
@@ -28,7 +28,14 @@ header .logo h1{
     font-size: 18px;
     font-weight: 600;
     margin: 0 0;
-    padding: 0 0 0 25px;
+    /* padding: 0 0 0 25px; */
+}
+.logo h1{
+  font-size : 22px !important;
+}
+
+.logo h3{
+  font-size: 13px !important;
 }
 
 header .nav a{
